--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 @import "./styles/summary.css";
 @import "./styles/toc.css";
 @import "./styles/switcher.css";
+@import "./styles/contentSwitcher.css";
 
 @import "./styles/cases/resale.css";
 
