--- a/styles/case.css
+++ b/styles/case.css
@@ -79,6 +79,9 @@
     width: 100%;
     object-fit: contain;
     position: relative;
+}
+
+.case__pic_rounded {
     border-radius: var(--radius-m);
 }
 
