add final results and final blocks to resale

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 @import "./styles/toc.css";
 @import "./styles/switcher.css";
 @import "./styles/contentSwitcher.css";
+@import "./styles/metrics.css";
 
 @import "./styles/cases/resale.css";
 
