add what we had section

--- a/styles/case.css
+++ b/styles/case.css
@@ -5,6 +5,7 @@
 
     --fz: clamp(16px, 1.3vw, 20px);
 
+    --radius-s: min(0.8em, 2vw);
     --radius-m: min(1.2em, 3vw);
     --min-padding: 32px;
     
@@ -100,6 +101,10 @@
 
 .case__pic_rounded {
     border-radius: var(--radius-m);
+}
+
+.case__pic_rounded_s {
+    border-radius: var(--radius-s);
 }
 
 .case__caption {
