--- a/styles/cases/resale.css
+++ b/styles/cases/resale.css
@@ -1,7 +1,3 @@
-.resale {
-    font-size: var(--fz);
-}
-
 /* Intro ///////////////////// */
 
 .resale .--intro {
@@ -110,11 +106,10 @@
 
 .resale .--tickets__container_new .--tickets__item::before,
 .resale .--tickets__container_new .--tickets__item::after {
-    /* --starsScaleAnimation: 0; */
     content: '';
     display: block;
     position: absolute;
-    background-image: url('data:image/svg+xml,<svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg"><foreignObject x="-10" y="-10" width="80" height="80"><div xmlns="http://www.w3.org/1999/xhtml" style="backdrop-filter:blur(5px);clip-path:url(%23bgblur_0_2085_4291_clip_path);height:100%;width:100%"></div></foreignObject><path data-figma-bg-blur-radius="10" d="M60 30C31.5 31.5 31.5 31.5 30 60C28.5 31.5 28.5 31.5 0 30C28.5 28.5 28.5 28.5 30 0C31.5 28.5 31.5 28.5 60 30Z" fill="white"/><defs><clipPath id="bgblur_0_2085_4291_clip_path" transform="translate(10 10)"><path d="M60 30C31.5 31.5 31.5 31.5 30 60C28.5 31.5 28.5 31.5 0 30C28.5 28.5 28.5 28.5 30 0C31.5 28.5 31.5 28.5 60 30Z"/></clipPath></defs></svg>');
+    background-image: url('data:image/svg+xml,<svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M60 30C31.5 31.5 31.5 31.5 30 60C28.5 31.5 28.5 31.5 0 30C28.5 28.5 28.5 28.5 30 0C31.5 28.5 31.5 28.5 60 30Z" fill="white"/></svg>');
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 1;
