--- a/styles/cases/funnel.css
+++ b/styles/cases/funnel.css
@@ -437,6 +437,42 @@
     background-position: center;
 }
 
+/* New map select ///////////////////////*/
+
+.funnel .--new-map {
+    position: relative;
+    display: grid;
+    align-items: center;
+}
+
+.funnel .--new-map__desktop,
+.funnel .--new-map__mobile {
+    grid-area: 1 / 1;
+    box-sizing: border-box;
+}
+
+.funnel .--new-map__mobile {
+    margin: 0 auto;
+    width: 100%;
+    max-width: var(--w-s);
+}
+
+.funnel .--new-map__video {
+    width: 53%;
+    filter: 
+        drop-shadow(0 1px 2px color-mix(in srgb, var(--c-dark) 46%, transparent)) 
+        drop-shadow(2px 2px 10px color-mix(in srgb, var(--c-dark) 36%, transparent)) 
+        drop-shadow(4px 6px 20px color-mix(in srgb, var(--c-dark) 26%, transparent)) 
+        drop-shadow(6px 12px 48px color-mix(in srgb, var(--c-dark) 16%, transparent));
+}
+
+.funnel .--new-map video {
+    mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="715" height="1456" viewBox="0 0 715 1456" fill="none"><path d="M6 187.2C6 121.674 6 88.9108 18.7522 63.8831C29.9694 41.8681 47.8681 23.9694 69.8831 12.7522C94.9108 0 127.674 0 193.2 0H522.8C588.326 0 621.089 0 646.117 12.7522C668.132 23.9694 686.031 41.8681 697.248 63.8831C710 88.9108 710 121.674 710 187.2V462H712C713.657 462 715 463.343 715 465V633C715 634.657 713.657 636 712 636H710V1268.8C710 1334.33 710 1367.09 697.248 1392.12C686.031 1414.13 668.132 1432.03 646.117 1443.25C621.089 1456 588.326 1456 522.8 1456H193.2C127.674 1456 94.9108 1456 69.8831 1443.25C47.8681 1432.03 29.9694 1414.13 18.7522 1392.12C6 1367.09 6 1334.33 6 1268.8V636H3C1.34315 636 0 634.657 0 633V529C0 527.343 1.34315 526 3 526H6V495H3C1.34315 495 0 493.657 0 492V388C0 386.343 1.34315 385 3 385H6V334H3C1.34315 334 0 332.657 0 331V284C0 282.343 1.34315 281 3 281H6V187.2Z" fill="white"/></svg>');
+    mask-size: contain;
+    mask-position: center;
+    mask-repeat: no-repeat;
+}
+
 
 /* //////////////////////////////////////
 /////////////////////////////////////////
@@ -691,6 +727,26 @@
 
 
     
+    .funnel .--new-map {
+        margin: 0 calc(var(--min-padding) * -1);
+    }
     
+    .funnel .--new-map__desktop {
+        aspect-ratio: 18 / 13;
+    }
+
+    .funnel .--new-map__mobile {
+        padding: 0 var(--min-padding);
+    }
+
+    .funnel .--new-map__desktop img {
+        border-radius: 0;
+        object-fit: cover;
+        height: 100%;
+    }
+
+    .funnel .--new-map__video {
+        width: 58%;
+    }
 
 }
