--- a/styles/hero.css
+++ b/styles/hero.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    will-change: transform, opacity;
 }
 
 .hero__3d {
