--- a/styles/case.css
+++ b/styles/case.css
@@ -18,7 +18,7 @@
 .case__body {
     max-width: var(--w-l);
     margin: 0 auto;
-    padding: 0 max(var(--min-padding), 5vw) 10dvh;
+    padding: 0 max(var(--min-padding), 5vw) 10lvh;
 }
 
 .case__summary {
