--- a/styles/cases/resale.css
+++ b/styles/cases/resale.css
@@ -3,8 +3,8 @@
 .resale .--intro {
     display: flex;
     align-items: center;
-    margin-top: clamp(60px, 12dvh, 150px);
-    margin-bottom: clamp(40px, 10dvh, 120px);
+    margin-top: clamp(60px, 12lvh, 150px);
+    margin-bottom: clamp(40px, 10lvh, 120px);
 }
 
 .resale .--intro__pic {
@@ -348,8 +348,8 @@
 
 @media (max-width: 500px) {
     .resale .--intro {
-        margin-top: clamp(150px, 18dvh, 250px);
-        margin-bottom: clamp(120px, 14dvh, 200px);
+        margin-top: clamp(150px, 18lvh, 250px);
+        margin-bottom: clamp(120px, 14lvh, 200px);
     }
 
     .resale .--intro__pic:nth-child(1) {
