--- a/styles/play.css
+++ b/styles/play.css
@@ -1,6 +1,6 @@
 .play {
     position: relative;
-    padding: 20dvh 0;
+    padding: 20lvh 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,11 +12,12 @@
     position: relative;
     display: flex;
     justify-content: center;
-    width: 100%;
-    height: 60dvh;
+    /* width: fit-content; */
+    height: 60lvh;
 }
 
 .play__pic {
+    /* width: 200px; */
     height: 100%;
     padding: 16px;
     border-radius: 32px;
@@ -60,10 +61,10 @@
 
 .play__pic img {
     display: block;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     object-fit: contain;
-    border-radius: 16px;
+    border-radius: 16px; 
 }
 
 .play__link {
@@ -76,7 +77,7 @@
     transform-origin: bottom;
     z-index: 3;
     font-family: var(--f-display-alt);
-    font-size: clamp(120px, 30dvh, 400px);
+    font-size: clamp(120px, 30lvh, 400px);
     line-height: 0.8em;
     letter-spacing: 0.02em;
     height: 1em;
@@ -121,7 +122,7 @@
 
 @media (max-width: 500px) {
     .play__pictures {
-        height: 50dvh;
+        height: 50lvh;
     }
 
     .play__pic {
