--- a/styles/toc.css
+++ b/styles/toc.css
@@ -13,7 +13,7 @@
 .toc::after {
     content: '';
     width: 150%;
-    height: 100dvh;
+    height: 100vh;
     position: absolute;
     top: 50%;
     left: -50%;
